version/0.20/_sources/api/solver/_autosummary/settings/outlet_vent.rst.txt
:orphan:

.. _outlet_vent:

outlet_vent
===========

.. autoclass:: ansys.fluent.core.solver.settings_241.outlet_vent.outlet_vent
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`outlet_vent_child <outlet_vent_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

